--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": ">=7.0"
     },
+    "license": "MIT",
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
